se agrego la segunda parte del proyecto integrador - otro html con con nu for y java script

--- a/pagarMes.html
+++ b/pagarMes.html
@@ -138,9 +138,9 @@
                             <label for="" class="select__div--label form-label">Disabled select menu</label>
                             <select id="tipoDescuento" class="select__div--input  form-select">
                                 <option selected>-- seleccione --</option>
-                                <option selected>Estudiante</option>
-                                <option selected>Miembro</option>
-                                <option selected>Promoción</option>
+                                <option>Estudiante</option>
+                                <option>Miembro</option>
+                                <option>Promoción</option>
                             </select>
                         </div>
                     </div>
